多个服务注册到eureka集群

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,8 @@
 		<module>microservicecloud-dept-80</module>
 		<module>microservicecloud-eureka-7002</module>
 		<module>microservicecloud-eureka-7003</module>
+		<module>microservicecloud-provider-8002</module>
+		<module>microservicecloud-provider-8003</module>
 	</modules>
 	<build>
 		<finalName>microservicecloud</finalName>
